force-app/main/default/objects/Account/fields/QuickBooks_Synched_On__c.field-meta.xml
<CustomField>
    <fullName>QuickBooks_Synched_On__c</fullName>
    <description>date/time when quickbooks id populated for account</description>
    <label>QuickBooks Synched On</label>
    <type>DateTime</type>
</CustomField>