force-app/main/default/objects/Account/fields/Re_Sync__c.field-meta.xml
<CustomField>
    <fullName>Re_Sync__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Re-Sync</label>
    <type>Checkbox</type>
</CustomField>