force-app/main/default/objects/Account/fields/Retailer__c.field-meta.xml
<CustomField>
    <fullName>Retailer__c</fullName>
    <label>Retailer</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Site_Audit_Stocking__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Paper Retailer</fullName>
            </value>
            <value>
                <fullName>Wood Retailer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>