force-app/main/default/objects/Account/fields/Risk_Assessment_Addendum_Social_auditor__c.field-meta.xml
<CustomField>
    <fullName>Risk_Assessment_Addendum_Social_auditor__c</fullName>
    <label>Risk Assessment Addendum Social auditor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>