force-app/main/default/objects/Account/fields/RTName__c.field-meta.xml
<CustomField>
    <fullName>RTName__c</fullName>
    <formula>RecordType.Name</formula>
    <label>RT Name</label>
    <type>Text</type>
</CustomField>