force-app/main/default/objects/Account/fields/SC_SharePoint_Folder_Id__c.field-meta.xml
<CustomField>
    <fullName>SC_SharePoint_Folder_Id__c</fullName>
    <label>SC SharePoint Folder Id</label>
    <type>TextArea</type>
</CustomField>