force-app/main/default/objects/Account/fields/SC_SharePoint_Folder_URL__c.field-meta.xml
<CustomField>
    <fullName>SC_SharePoint_Folder_URL__c</fullName>
    <label>SC SharePoint Folder URL</label>
    <length>20000</length>
    <type>LongTextArea</type>
</CustomField>