force-app/main/default/objects/Account/fields/SCOpportunityFolderSharePointId__c.field-meta.xml
<CustomField>
    <fullName>SCOpportunityFolderSharePointId__c</fullName>
    <label>SCOpportunityFolderSharePointId</label>
    <type>TextArea</type>
</CustomField>