force-app/main/default/objects/Account/fields/SCOpportunityFolderSharePointURL__c.field-meta.xml
<CustomField>
    <fullName>SCOpportunityFolderSharePointURL__c</fullName>
    <label>SCOpportunityFolderSharePointURL</label>
    <length>20000</length>
    <type>LongTextArea</type>
</CustomField>