force-app/main/default/objects/Account/fields/Secondary_Manufacturer__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Manufacturer__c</fullName>
    <label>Secondary Manufacturer</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Box</fullName>
            </value>
            <value>
                <fullName>Cabinetry</fullName>
            </value>
            <value>
                <fullName>Door</fullName>
            </value>
            <value>
                <fullName>Flooring</fullName>
            </value>
            <value>
                <fullName>Furniture</fullName>
            </value>
            <value>
                <fullName>Lumber</fullName>
            </value>
            <value>
                <fullName>Moulding/Millwork</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Panels/Plywood</fullName>
            </value>
            <value>
                <fullName>Paper Converter</fullName>
            </value>
            <value>
                <fullName>Window</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>