force-app/main/default/objects/Account/fields/SGSOpportunityFolderSharePointId__c.field-meta.xml
<CustomField>
    <fullName>SGSOpportunityFolderSharePointId__c</fullName>
    <label>SGSOpportunityFolderSharePointId</label>
    <type>TextArea</type>
</CustomField>