force-app/main/default/objects/Account/fields/SGSOpportunityFolderSharePointURL__c.field-meta.xml
<CustomField>
    <fullName>SGSOpportunityFolderSharePointURL__c</fullName>
    <label>SGSOpportunityFolderSharePointURL</label>
    <length>20000</length>
    <type>LongTextArea</type>
</CustomField>