force-app/main/default/objects/Account/fields/SharePoint_Folder_Id__c.field-meta.xml
<CustomField>
    <fullName>SharePoint_Folder_Id__c</fullName>
    <label>SGS SharePoint Folder Id</label>
    <type>TextArea</type>
</CustomField>