force-app/main/default/objects/Account/fields/ShippingCityStateandCountry__c.field-meta.xml
<CustomField>
    <fullName>ShippingCityStateandCountry__c</fullName>
    <formula>IF(NOT(ISBLANK(ShippingState)), ShippingCity + &quot;, &quot; + ShippingState + &quot;, &quot; + ShippingCountry,ShippingCity + &quot;, &quot; + ShippingCountry)</formula>
    <label>Shipping City, State and Country</label>
    <type>Text</type>
</CustomField>