force-app/main/default/objects/Account/fields/SIC_SharePoint_Folder_Id__c.field-meta.xml
<CustomField>
    <fullName>SIC_SharePoint_Folder_Id__c</fullName>
    <label>SIC SharePoint Folder Id</label>
    <type>TextArea</type>
</CustomField>