force-app/main/default/objects/Account/fields/SIC_SharePoint_Folder_URL__c.field-meta.xml
<CustomField>
    <fullName>SIC_SharePoint_Folder_URL__c</fullName>
    <label>SIC SharePoint Folder URL</label>
    <length>20000</length>
    <type>LongTextArea</type>
</CustomField>