force-app/main/default/objects/Account/fields/SICOpportunityFolderSharePointId__c.field-meta.xml
<CustomField>
    <fullName>SICOpportunityFolderSharePointId__c</fullName>
    <label>SICOpportunityFolderSharePointId</label>
    <type>TextArea</type>
</CustomField>