force-app/main/default/objects/Account/fields/SICOpportunityFolderSharePointURL__c.field-meta.xml
<CustomField>
    <fullName>SICOpportunityFolderSharePointURL__c</fullName>
    <label>SICOpportunityFolderSharePointURL</label>
    <length>20000</length>
    <type>LongTextArea</type>
</CustomField>