force-app/main/default/objects/Account/fields/Site_Audit_Stocking__c.field-meta.xml
<CustomField>
    <fullName>Site_Audit_Stocking__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Site Audit (Stocking)</label>
    <type>Checkbox</type>
</CustomField>