force-app/main/default/objects/Account/fields/SS_SharePoint_Folder_Id__c.field-meta.xml
<CustomField>
    <fullName>SS_SharePoint_Folder_Id__c</fullName>
    <label>SS SharePoint Folder Id</label>
    <type>TextArea</type>
</CustomField>