force-app/main/default/objects/Account/fields/SS_SharePoint_Folder_URL__c.field-meta.xml
<CustomField>
    <fullName>SS_SharePoint_Folder_URL__c</fullName>
    <label>SS SharePoint Folder URL</label>
    <length>20000</length>
    <type>LongTextArea</type>
</CustomField>