force-app/main/default/objects/Account/fields/SSOpportunityFolderSharePointId__c.field-meta.xml
<CustomField>
    <fullName>SSOpportunityFolderSharePointId__c</fullName>
    <label>SSOpportunityFolderSharePointId</label>
    <type>TextArea</type>
</CustomField>