force-app/main/default/objects/Account/fields/SSOpportunityFolderSharePointURL__c.field-meta.xml
<CustomField>
    <fullName>SSOpportunityFolderSharePointURL__c</fullName>
    <label>SSOpportunityFolderSharePointURL</label>
    <length>20000</length>
    <type>LongTextArea</type>
</CustomField>