force-app/main/default/objects/Account/fields/Sub_Industry__c.field-meta.xml
<CustomField>
    <fullName>Sub_Industry__c</fullName>
    <label>Sub Industry</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Grower / Packer</fullName>
            </value>
            <value>
                <fullName>Processor / Manufacturer</fullName>
            </value>
            <value>
                <fullName>Distributor / Retailer</fullName>
            </value>
            <value>
                <fullName>grower</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>