force-app/main/default/objects/Account/fields/Web_Traffic_Source__c.field-meta.xml
<CustomField>
    <fullName>Web_Traffic_Source__c</fullName>
    <description>values from web form</description>
    <label>Web Traffic Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Web_Traffic_Source</valueSetName>
    </valueSet>
</CustomField>