force-app/main/default/objects/Account/fields/Wholesaler_Distributor__c.field-meta.xml
<CustomField>
    <fullName>Wholesaler_Distributor__c</fullName>
    <label>Wholesaler/Distributor</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Site_Audit_Stocking__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Paper WD</fullName>
            </value>
            <value>
                <fullName>Wood WD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>