force-app/main/default/objects/Account/recordTypes/CustomerSite.recordType-meta.xml
<RecordType>
    <fullName>CustomerSite</fullName>
    <active>true</active>
    <label>Customer Site</label>
</RecordType>