force-app/main/default/objects/Account/recordTypes/Internal.recordType-meta.xml
<RecordType>
    <fullName>Internal</fullName>
    <active>true</active>
    <description>Account : Internal or Customer</description>
    <label>Internal</label>
</RecordType>