force-app/main/default/objects/Account/validationRules/Restrict_User_to_edit_QB_synched_Account.validationRule-meta.xml
<ValidationRule>
    <fullName>Restrict_User_to_edit_QB_synched_Account</fullName>
    <active>false</active>
    <errorConditionFormula>AND( ISCHANGED( Name ),
NOT(ISBLANK(Quickbooks_ID__c)), NOT($Permission.Bypass_Permission)
)</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>Account Name cannot be changed once it is synched to QB.</errorMessage>
</ValidationRule>