force-app/main/default/objects/Account/listViews/Account_Sites.listView-meta.xml
<ListView>
    <fullName>Account_Sites</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>ACCOUNT.ADDRESS2_CITY</columns>
    <columns>ACCOUNT.ADDRESS2_COUNTRY_CODE</columns>
    <columns>ACCOUNT.ADDRESS2_STATE_CODE</columns>
    <columns>ACCOUNT.ADDRESS2_STREET</columns>
    <columns>ACCOUNT.ADDRESS2_ZIP</columns>
    <columns>PARENT_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.CustomerSite</value>
    </filters>
    <label>Account Sites</label>
</ListView>