force-app/main/default/objects/Account/listViews/Org_Account_Hierarchy.listView-meta.xml
<ListView>
    <fullName>Org_Account_Hierarchy</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Account_Status__c</columns>
    <columns>Complete_Billing_Address__c</columns>
    <columns>Complete_Shipping_Address__c</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>Payment_Terms__c</columns>
    <columns>ACCOUNT.RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <label>Org_Account_Hierarchy</label>
</ListView>